Texting fixed image fix on mobile

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -1,7 +1,26 @@
 /*General*/
+html{
+    height: 100%;
+}
+
 body {
     position: relative;
     background-image: url(/img/pattern.svg);
+}
+
+/* Fix bg images on mobile*/
+body::after{
+      content:"";
+      position:fixed; /* stretch a fixed position to the whole screen */
+      top:0;
+      height:100vh; /* fix for mobile browser address bar appearing disappearing */
+      left:0;
+      right:0;
+      z-index:-1; /* needed to keep in the background */
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
 }
 
 a{
